--- a/assets/sass/layout/_posts-articles.scss
+++ b/assets/sass/layout/_posts-articles.scss
@@ -38,7 +38,7 @@
   }
 }
 .loop-item--themeblog {
-  .row { 
+  .row {
     .blog-image {
       background: $off-white;
     }
@@ -48,7 +48,7 @@
   }
   @include breakpoint($bp-medium){
     .row {
-      display: flex; 
+      display: flex;
       align-items: stretch;
     }
   }
@@ -59,7 +59,7 @@
     @include breakpoint($bp-medium){
       padding: 0.25em 1.5em 1.5em;
     }
-  } 
+  }
 }
 .page-template-search-php {
   .content {
@@ -70,7 +70,7 @@
     h2 {
       margin-top: 0.75em !important;
     }
-  } 
+  }
 }
 .loop-item-small {
   .content {
@@ -101,7 +101,7 @@
   position: absolute;
   font-family: $secondary-font;
   font-weight: bold;
-  white-space: nowrap;
+  //white-space: nowrap;
   z-index: 100;
   text-transform: uppercase;
   @include font-size(1.1);
@@ -119,11 +119,11 @@
   background: $yellow;
 }
 .post__featureimage {
-  position: relative; 
+  position: relative;
   z-index: 0;
   display: block;
   background: #F8F8F8;
-  text-align: center; 
+  text-align: center;
   img {
     max-height: 354px;
   }
