--- a/css/style.css
+++ b/css/style.css
@@ -1563,7 +1563,6 @@ h3.body-copy.label {
   position: absolute;
   font-family: OpenSans, "Droid Sans", Verdana, "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
   font-weight: bold;
-  white-space: nowrap;
   z-index: 100;
   text-transform: uppercase;
   font-size: 11px;
@@ -1855,11 +1854,16 @@ h3.body-copy.label {
   .site-slogan h3 {
     margin: 0;
     line-height: 40px;
-    padding-top: 0.5em; }
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-top: 0.5em;
+    padding-right: 1em; }
     @media (min-width: 768px) {
       .site-slogan h3 {
         line-height: 80px;
-        padding-top: 0; } }
+        padding-top: 0;
+        padding-right: 0; } }
 
 .search-area {
   padding: 0.5em; }
